# llm-review

./: .gitignore  README.md  pyproject.toml  run.py
code_styles/: code_styles_list.py
src/: gitlab_workflow.py  llm_workflow.py  review_workflow.py  unit_tests.py
templates/: review_prompt.j2
